fixed bug where overflow y is not scroll and gave it fixed height based on viewport

--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -1,3 +1,9 @@
 .Editor {
   all: unset;
+  margin-bottom: 20px;
+}
+
+.demo-editor {
+  height: calc(100vh - 250px);
+  overflow-y: auto;
 }
